--- a/Parágrafros e quebras/index.html
+++ b/Parágrafros e quebras/index.html
@@ -13,5 +13,17 @@
         Paragraph using &lt;p&gt; and &lt;/p&gt;</p>
     <p>or break a line with the &lt;br&gt;<br> command</p>
     <!-- Bom dia a tosdos-->
+    <p>Lets add special simbols:
+        &reg;
+        &copf;
+        &trade;
+        &euro;
+        &pound;
+        &cent;
+        &yen;
+        &Delta;
+        &uparrow;
+    </p>
+    <p>Now lets add emoji: 😀 <br> Using unicode: &#x1F600; </p>
 </body>
 </html>
