--- a/formatação de texto/index.html
+++ b/formatação de texto/index.html
@@ -13,5 +13,19 @@
     <h2>Italic / Emphasis</h2>
     <p>in this phrase we have a <i>italic term</i> with the i tag</p>
     <p>and in this we have a <em>emphasis term</em> with the em tag</p>
+    <h2>marked text</h2>
+    <p>We can create a <mark style="background-color: deeppink;"> mark text </mark> with the mark tag </p>
+    <h2>big and small text</h2>
+    <p>Creating a <big>Upper Text</big> and a <small>small text</small> with the big(obsolete) and small tag </p>
+    <h2>Deleted Text</h2>
+    <p>We can mark a text as <del>deleted</del>, to show that it should be read but not consindered, we use the del tag</p>
+    <h2>Inserted text</h2> 
+    <p>We can mark a text as <ins>inserted</ins>, to show that it as added later and should be considered, we use the ins tag</p>  
+    <p>and to <u>underline</u> a text we use the ins(No semantic) tag </p>
+    <h2>Superscript text</h2>
+    <p>To write 2^4 as 2<sup>4</sup> with the sup tag</p>
+    <h2>Subscript text</h2>
+    <p>To write H2O as H<sub>2</sub>O using the sub tag</p>
+
 </body>
 </html>
